--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,1 +1,191 @@
-/*# sourceMappingURL=style.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  overflow-x: hidden;
+}
+body header {
+  display: flex;
+  justify-content: center;
+  position: sticky;
+  top: 0;
+  z-index: 5;
+  background-color: white;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+body header div.top {
+  width: 1200px;
+}
+body header div.top nav {
+  display: flex;
+  justify-content: space-between;
+}
+body header div.top nav div h2 {
+  color: #448899;
+  font-size: 30px;
+}
+body header div.top nav div ul {
+  display: flex;
+  justify-content: space-between;
+}
+body header div.top nav div ul li {
+  list-style-type: none;
+  text-decoration: none;
+  font-size: 16px;
+  padding: 10px;
+}
+body section.top {
+  border: solid orange 3px;
+  position: relative;
+  height: 320px;
+}
+body section.top div.hero-image {
+  height: 480px;
+  background-image: url("../images/welcome-image.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: -10;
+}
+body section.top div.top-main {
+  position: absolute;
+  height: 50%;
+  top: 25%;
+  width: 100%;
+  left: 0%;
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+}
+body section.top div.top-main div.top-main-content {
+  position: relative;
+  width: 1200px;
+  color: white;
+}
+body section.top div.top-main div.top-main-content div.top-main-text {
+  height: 50%;
+  position: relative;
+}
+body section.top div.top-main div.top-main-content div.top-main-text div.slogan-main {
+  font-size: 28px;
+  font-weight: bold;
+}
+body section.top div.top-main div.top-main-content div.top-main-text div.slogan-sub {
+  position: absolute;
+  font-size: 16px;
+  font-weight: bold;
+  bottom: 0px;
+}
+body section.top div.top-main div.top-main-content div.search {
+  position: absolute;
+  height: 46px;
+  width: 100%;
+  top: 100px;
+}
+body section.top div.top-main div.top-main-content div.search div.search-bar {
+  position: relative;
+  display: flex;
+  height: 100%;
+  width: 460px;
+  background-color: white;
+  border-radius: 5px;
+  overflow: hidden;
+}
+body section.top div.top-main div.top-main-content div.search div.search-bar div.search-input {
+  width: 100%;
+}
+body section.top div.top-main div.top-main-content div.search div.search-bar div.search-input input {
+  position: absolute;
+  border: none;
+  outline: none;
+  width: 80%;
+  left: 15px;
+  top: 13px;
+  font-size: 16px;
+  line-height: 16px;
+}
+body section.top div.top-main div.top-main-content div.search div.search-bar div.search-input ::-moz-placeholder {
+  font-size: 16px;
+  font-weight: bold;
+}
+body section.top div.top-main div.top-main-content div.search div.search-bar div.search-input ::placeholder {
+  font-size: 16px;
+  font-weight: bold;
+}
+body section.top div.top-main div.top-main-content div.search div.search-bar div.magnifier {
+  position: absolute;
+  background-color: #448899;
+  width: 60px;
+  height: 100%;
+  right: 0px;
+  border-radius: 0px 5px 5px 0px;
+  background-image: url(../images/magnifier.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 30px 30px;
+  cursor: pointer;
+}
+body main {
+  border: solid blue 3px;
+  height: 966px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+}
+body main section.main {
+  border: solid green 3px;
+  width: 1200px;
+  height: 100%;
+  padding: 40px 0px 40px 0px;
+}
+body main section.main div.list-bar {
+  border: solid red 3px;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+}
+body main section.main div.list-bar div.left {
+  height: 50px;
+}
+body main section.main div.list-bar div.left img {
+  opacity: 50%;
+  width: 32px;
+  height: 32px;
+  transition: all 0.3s ease;
+}
+body main section.main div.list-bar div.left img:hover {
+  opacity: 100%;
+}
+body main section.main div.list-bar div.mrt-list {
+  width: 1106px;
+  height: 50px;
+}
+body main section.main div.list-bar div.right {
+  height: 50px;
+}
+body main section.main div.list-bar div.right img {
+  opacity: 50%;
+  width: 32px;
+  height: 32px;
+  transition: all 0.3s ease;
+}
+body main section.main div.list-bar div.right img:hover {
+  opacity: 100%;
+}
+body footer {
+  height: 104px;
+  background-color: #757575;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body footer div.text {
+  color: white;
+  font-weight: bold;
+}/*# sourceMappingURL=style.css.map */
