--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -6,6 +6,9 @@
 
 body {
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 body header {
   display: flex;
@@ -16,6 +19,7 @@ body header {
   background-color: white;
   padding-top: 5px;
   padding-bottom: 5px;
+  box-shadow: 0 10px 6px -6px #777;
 }
 body header div.top {
   width: 1200px;
@@ -132,10 +136,10 @@ body section.top div.top-main div.top-main-content div.search div.search-bar div
 }
 body main {
   border: solid blue 3px;
-  height: 966px;
   background-color: white;
   display: flex;
   justify-content: center;
+  flex-grow: 1;
 }
 body main section.main {
   border: solid green 3px;
@@ -152,34 +156,141 @@ body main section.main div.list-bar {
 }
 body main section.main div.list-bar div.left {
   height: 50px;
+  padding: 9px 0px 9px 15px;
 }
 body main section.main div.list-bar div.left img {
   opacity: 50%;
   width: 32px;
   height: 32px;
+  cursor: pointer;
   transition: all 0.3s ease;
 }
 body main section.main div.list-bar div.left img:hover {
   opacity: 100%;
 }
 body main section.main div.list-bar div.mrt-list {
+  border: solid orange 3px;
   width: 1106px;
   height: 50px;
+  white-space: nowrap;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  display: flex;
+  align-items: center;
+}
+body main section.main div.list-bar div.mrt-list div.mrt-text-container {
+  border: solid blue 3px;
+  display: flex;
+  transition: all 0.3s ease;
+}
+body main section.main div.list-bar div.mrt-list div.mrt-text-container div.mrt-text {
+  color: black;
+  padding: 5px 15px 5px 15px;
+}
+body main section.main div.list-bar div.mrt-list div.mrt-text-container div.mrt-text:hover {
+  color: red;
+  cursor: pointer;
 }
 body main section.main div.list-bar div.right {
   height: 50px;
+  padding: 9px 15px 9px 0px;
 }
 body main section.main div.list-bar div.right img {
   opacity: 50%;
   width: 32px;
   height: 32px;
+  cursor: pointer;
   transition: all 0.3s ease;
 }
 body main section.main div.list-bar div.right img:hover {
   opacity: 100%;
 }
+body main section.main div.attractions {
+  border: solid purple 3px;
+  width: 100%;
+  padding: 15px;
+}
+body main section.main div.attractions div.attractions-group {
+  border: solid yellow 3px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 30px;
+}
+body main section.main div.attractions div.attractions-group div.attraction {
+  position: relative;
+  border: solid #e8e8e8 1px;
+  border-radius: 5px;
+  overflow: hidden;
+  height: 242px;
+  width: 23.04%;
+}
+body main section.main div.attractions div.attractions-group div.attraction div.attraction-img {
+  border: solid blue 1px;
+  width: 100%;
+  height: 197px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+body main section.main div.attractions div.attractions-group div.attraction div.attraction-name {
+  border: solid green 1px;
+  width: 100%;
+  height: 40px;
+  position: absolute;
+  top: 157px;
+  background-color: black;
+  opacity: 60%;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+body main section.main div.attractions div.attractions-group div.attraction div.attraction-name div.attraction-name-text {
+  border: solid red 1px;
+  width: 100%;
+  color: white;
+  font-weight: bold;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+body main section.main div.attractions div.attractions-group div.attraction div.attraction-info {
+  border: solid orange 1px;
+  width: 100%;
+  height: 45px;
+  padding: 10px;
+  display: flex;
+}
+body main section.main div.attractions div.attractions-group div.attraction div.attraction-info div.attraction-info-mrt {
+  border: solid green 1px;
+  height: 100%;
+  flex: 1;
+  display: flex;
+  align-items: center;
+}
+body main section.main div.attractions div.attractions-group div.attraction div.attraction-info div.attraction-info-mrt div.attraction-info-mrt-name {
+  border: solid orange 1px;
+  color: #757575;
+}
+body main section.main div.attractions div.attractions-group div.attraction div.attraction-info div.attraction-info-category {
+  border: solid yellowgreen 1px;
+  height: 100%;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+body main section.main div.attractions div.attractions-group div.attraction div.attraction-info div.attraction-info-category div.attraction-info-category-name {
+  position: absolute;
+  border: solid orange 1px;
+  color: #757575;
+  right: 0px;
+}
 body footer {
-  height: 104px;
+  min-height: 104px;
   background-color: #757575;
   display: flex;
   justify-content: center;
@@ -188,4 +299,39 @@ body footer {
 body footer div.text {
   color: white;
   font-weight: bold;
+}
+
+@media (min-width: 601px) and (max-width: 1200px) {
+  body header div.top {
+    width: 600px;
+  }
+  body section.top div.top-main div.top-main-content {
+    width: 600px;
+  }
+  body main section.main {
+    width: 600px;
+  }
+  body main section.main div.attractions div.attractions-group div.attraction {
+    width: 47.2%;
+  }
+}
+@media (min-width: 361px) and (max-width: 600px) {
+  body header div.top {
+    width: 360px;
+  }
+  body section.top div.top-main div.top-main-content {
+    width: 360px;
+  }
+  body section.top div.hero-image {
+    background-position: -825px -150px;
+  }
+  body section.top div.top-main div.top-main-content div.search div.search-bar {
+    width: 285px;
+  }
+  body main section.main {
+    width: 360px;
+  }
+  body main section.main div.attractions div.attractions-group div.attraction {
+    width: 100%;
+  }
 }/*# sourceMappingURL=style.css.map */
