--- a/static/styles/style.scss
+++ b/static/styles/style.scss
@@ -190,10 +190,10 @@ body {
             transition: all 0.3s ease;
             div.mrt-text {
               // border: solid blue 3px;
-              color: black;
+              color: #666666;
               padding: 5px 15px 5px 15px;
               &:hover {
-                color: red;
+                color: black;
                 cursor: pointer;
               }
             }
