--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -13,8 +13,9 @@ body {
 body header {
   display: flex;
   justify-content: center;
-  position: sticky;
-  top: 0;
+  position: fixed;
+  width: 100%;
+  top: 0vh;
   z-index: 5;
   background-color: white;
   padding-top: 5px;
@@ -31,6 +32,7 @@ body header div.top nav {
 body header div.top nav div h2 {
   color: #448899;
   font-size: 30px;
+  cursor: pointer;
 }
 body header div.top nav div ul {
   display: flex;
@@ -273,6 +275,9 @@ body main section.main div.attractions div.attractions-group div.attraction div.
   color: #757575;
   right: 0px;
 }
+body main section.main div.attractions div.attractions-group div.error {
+  font-weight: bold;
+}
 body footer {
   min-height: 104px;
   background-color: #757575;
@@ -287,24 +292,24 @@ body footer div.text {
 
 @media (min-width: 601px) and (max-width: 1200px) {
   body header div.top {
-    width: 600px;
+    width: 90vw;
   }
   body section.top div.top-main div.top-main-content {
-    width: 600px;
+    width: 90vw;
   }
   body main section.main {
-    width: 600px;
+    width: 90vw;
   }
   body main section.main div.attractions div.attractions-group div.attraction {
-    width: 47.2%;
+    width: 47%;
   }
 }
 @media (min-width: 361px) and (max-width: 600px) {
   body header div.top {
-    width: 360px;
+    width: 90vw;
   }
   body section.top div.top-main div.top-main-content {
-    width: 360px;
+    width: 90vw;
   }
   body section.top div.hero-image {
     background-position: -825px -150px;
@@ -313,7 +318,7 @@ body footer div.text {
     width: 285px;
   }
   body main section.main {
-    width: 360px;
+    width: 90vw;
   }
   body main section.main div.attractions div.attractions-group div.attraction {
     width: 100%;
