--- a/static/styles/style.scss
+++ b/static/styles/style.scss
@@ -12,8 +12,9 @@ body {
   header {
     display: flex;
     justify-content: center;
-    position: sticky;
-    top: 0;
+    position: fixed;
+    width: 100%;
+    top: 0vh;
     z-index: 5;
     background-color: white;
     padding-top: 5px;
@@ -28,6 +29,7 @@ body {
           h2 {
             color: #448899;
             font-size: 30px;
+            cursor: pointer;
           }
         }
         div {
@@ -149,7 +151,7 @@ body {
     justify-content: center;
     flex-grow: 1;
     section.main {
-    //   border: solid green 3px;
+      //   border: solid green 3px;
       width: 1200px;
       height: 100%;
       padding: 40px 0px 40px 0px;
@@ -175,7 +177,7 @@ body {
           }
         }
         div.mrt-list {
-        //   border: solid orange 3px;
+          //   border: solid orange 3px;
           width: 1106px;
           height: 50px;
           white-space: nowrap;
@@ -221,7 +223,7 @@ body {
         // height: 816px;
         padding: 15px;
         div.attractions-group {
-        //   border: solid yellow 3px;
+          //   border: solid yellow 3px;
           width: 100%;
           height: 100%;
           display: flex;
@@ -237,7 +239,7 @@ body {
             height: 242px;
             width: 23.04%;
             div.attraction-img {
-            //   border: solid blue 1px;
+              //   border: solid blue 1px;
               width: 100%;
               height: 197px;
               background-position: center;
@@ -245,7 +247,7 @@ body {
               background-size: cover;
             }
             div.attraction-name {
-            //   border: solid green 1px;
+              //   border: solid green 1px;
               width: 100%;
               height: 40px;
               position: absolute;
@@ -266,7 +268,7 @@ body {
               }
             }
             div.attraction-info {
-            //   border: solid orange 1px;
+              //   border: solid orange 1px;
               width: 100%;
               height: 45px;
               padding: 10px;
@@ -278,7 +280,7 @@ body {
                 display: flex;
                 align-items: center;
                 div.attraction-info-mrt-name {
-                //   border: solid orange 1px;
+                  //   border: solid orange 1px;
                   color: #757575;
                 }
               }
@@ -291,12 +293,15 @@ body {
                 position: relative;
                 div.attraction-info-category-name {
                   position: absolute;
-                //   border: solid orange 1px;
+                  //   border: solid orange 1px;
                   color: #757575;
                   right: 0px;
                 }
               }
             }
+          }
+          div.error{
+            font-weight: bold;
           }
         }
       }
@@ -319,23 +324,23 @@ body {
   body {
     header {
       div.top {
-        width: 600px;
+        width: 90vw;
       }
     }
     section.top {
       div.top-main {
         div.top-main-content {
-          width: 600px;
+          width: 90vw;
         }
       }
     }
     main {
       section.main {
-        width: 600px;
+        width: 90vw;
         div.attractions {
           div.attractions-group {
             div.attraction {
-              width: 47.2%;
+              width: 47%;
             }
           }
         }
@@ -348,13 +353,13 @@ body {
   body {
     header {
       div.top {
-        width: 360px;
+        width: 90vw;
       }
     }
     section.top {
       div.top-main {
         div.top-main-content {
-          width: 360px;
+          width: 90vw;
         }
       }
     }
@@ -374,7 +379,7 @@ body {
     }
     main {
       section.main {
-        width: 360px;
+        width: 90vw;
         div.attractions {
           div.attractions-group {
             div.attraction {
