--- a/static/styles/style.scss
+++ b/static/styles/style.scss
@@ -238,6 +238,11 @@ body {
             overflow: hidden;
             height: 242px;
             width: 23.04%;
+            cursor: pointer;
+            &:hover{
+              background-color: #d6d6d6;
+              opacity: 90%;
+            }
             div.attraction-img {
               //   border: solid blue 1px;
               width: 100%;
