--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -524,7 +524,7 @@ body footer div.text {
     width: 47%;
   }
 }
-@media (min-width: 361px) and (max-width: 600px) {
+@media (min-width: 360px) and (max-width: 600px) {
   body header div.top {
     width: 90vw;
   }
@@ -552,12 +552,60 @@ body footer div.text {
     width: 95vw;
   }
 }
-@media (min-width: 361px) and (max-width: 880px) {
+@media (min-width: 601px) and (max-width: 880px) {
   body header div.top {
     width: 95vw;
   }
   body main section.attraction-page {
     width: 99vw;
+  }
+  body main section.attraction-page div.top {
+    height: 53px;
+  }
+  body main section.attraction-page div.attraction-content div.attraction-profile div.attraction-images {
+    width: 100%;
+  }
+  body main section.attraction-page div.attraction-content div.attraction-profile div.attraction-reservation {
+    width: 100%;
+    padding: 20px 20px;
+  }
+  body main section.attraction-page div.attraction-content hr.seperator {
+    margin-top: 10px;
+  }
+  body main section.attraction-page div.attraction-content div.attraction-info {
+    padding: 0px 20px;
+  }
+}
+@media (min-width: 551px) and (max-width: 600px) {
+  body header div.top {
+    width: 95vw;
+  }
+  body main section.attraction-page {
+    width: 97vw;
+  }
+  body main section.attraction-page div.top {
+    height: 53px;
+  }
+  body main section.attraction-page div.attraction-content div.attraction-profile div.attraction-images {
+    width: 100%;
+  }
+  body main section.attraction-page div.attraction-content div.attraction-profile div.attraction-reservation {
+    width: 100%;
+    padding: 20px 20px;
+  }
+  body main section.attraction-page div.attraction-content hr.seperator {
+    margin-top: 10px;
+  }
+  body main section.attraction-page div.attraction-content div.attraction-info {
+    padding: 0px 20px;
+  }
+}
+@media (min-width: 360px) and (max-width: 550px) {
+  body header div.top {
+    width: 95vw;
+  }
+  body main section.attraction-page {
+    width: 97vw;
   }
   body main section.attraction-page div.top {
     height: 53px;
