--- a/static/styles/style.scss
+++ b/static/styles/style.scss
@@ -492,7 +492,7 @@ body {
                   label {
                     margin: 0px 5px;
                   }
-                  input.selection-afternoon{
+                  input.selection-afternoon {
                     margin-left: 10px;
                   }
                 }
@@ -587,7 +587,7 @@ body {
   }
 }
 
-@media (min-width: 361px) and (max-width: 600px) {
+@media (min-width: 360px) and (max-width: 600px) {
   body {
     header {
       div.top {
@@ -648,7 +648,7 @@ body {
     }
   }
 }
-@media (min-width: 361px) and (max-width: 880px) {
+@media (min-width: 601px) and (max-width: 880px) {
   body {
     header {
       div.top {
@@ -674,7 +674,75 @@ body {
           hr.seperator {
             margin-top: 10px;
           }
-          div.attraction-info{
+          div.attraction-info {
+            padding: 0px 20px;
+          }
+        }
+      }
+    }
+  }
+}
+@media (min-width: 551px) and (max-width: 600px) {
+  body {
+    header {
+      div.top {
+        width: 95vw;
+      }
+    }
+    main {
+      section.attraction-page {
+        width: 97vw;
+        div.top {
+          height: 53px;
+        }
+        div.attraction-content {
+          div.attraction-profile {
+            div.attraction-images {
+              width: 100%;
+            }
+            div.attraction-reservation {
+              width: 100%;
+              padding: 20px 20px;
+            }
+          }
+          hr.seperator {
+            margin-top: 10px;
+          }
+          div.attraction-info {
+            padding: 0px 20px;
+          }
+        }
+      }
+    }
+  }
+}
+@media (min-width: 360px) and (max-width: 550px) {
+  body {
+    header {
+      div.top {
+        width: 95vw;
+      }
+    }
+    main {
+      section.attraction-page {
+        width: 97vw;
+        div.top {
+          height: 53px;
+        }
+        div.attraction-content {
+          div.attraction-profile {
+            div.attraction-images {
+              width: 100%;
+            }
+            div.attraction-reservation {
+              width: 100%;
+              padding: 20px 20px;
+            }
+          }
+          hr.seperator {
+            margin-top: 10px;
+          }
+          div.attraction-info {
             padding: 0px 20px;
           }
         }
