--- a/static/styles/style.scss
+++ b/static/styles/style.scss
@@ -52,7 +52,7 @@ body {
     }
   }
   div.signin-layer {
-    border: solid 3px red;
+    // border: solid 3px red;
     position: fixed;
     z-index: 10;
     width: 100%;
@@ -61,7 +61,7 @@ body {
     justify-content: center;
     background-color: rgba(rgb(0, 0, 0), 0.4);
     div.signin-form {
-      border: solid 3px orange;
+      // border: solid 3px orange;
       width: 340px;
       position: absolute;
       top: 80px;
