--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -753,6 +753,22 @@ body main section.booking-page div.confirm-info div.confirm-area div.confirm-are
   border-radius: 5px;
   cursor: pointer;
 }
+body main section.thankyou-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+body main section.thankyou-page div.thankyou-content {
+  width: 1000px;
+}
+body main section.thankyou-page div.thankyou-content div.thankyou-top {
+  height: 100px;
+}
+body main section.thankyou-page div.thankyou-content div.orders div.order-title {
+  font-size: 19px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
 body footer {
   min-height: 104px;
   height: 100%;
@@ -926,6 +942,14 @@ body footer div.text {
     width: 95%;
   }
   body main section.booking-page div.confirm-info {
+    width: 95%;
+  }
+}
+@media (min-width: 360px) and (max-width: 1000px) {
+  body main section.thankyou-page {
+    width: 100%;
+  }
+  body main section.thankyou-page div.thankyou-content {
     width: 95%;
   }
 }/*# sourceMappingURL=style.css.map */
